examples/fail/lexer/invalid_binary_digit.bina
// EXPECT_LEXER_ERROR: invalid binary literal
fn main() -> int {
    let x = 0b2;
    return 0;
}
